--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -3597,7 +3597,7 @@
                                               style="margin-left: -6px; margin-right: -6px; scroll-padding: 24px;">
                                               <div style="flex: 0 0 24px;" aria-hidden="true"></div>
                                               <li aria-hidden="false" data-key="Start-to-finish trip planning"
-                                                class="_1w7e1y2"
+                                                class="feature__airbnb-li"
                                                 style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
                                                 <div data-key="Start-to-finish trip planning" class="h-full">
                                                   <div class="wh-full">
@@ -3636,7 +3636,7 @@
                                                 </div>
                                               </li>
                                               <li aria-hidden="false" data-key="300 point inspection and vetting"
-                                                class="_1w7e1y2"
+                                                class="feature__airbnb-li"
                                                 style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
                                                 <div data-key="300 point inspection and vetting" class="h-full">
                                                   <div class="wh-full">
@@ -3674,7 +3674,7 @@
                                                   </div>
                                                 </div>
                                               </li>
-                                              <li aria-hidden="false" data-key="On-trip care" class="_1w7e1y2"
+                                              <li aria-hidden="false" data-key="On-trip care" class="feature__airbnb-li"
                                                 style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
                                                 <div data-key="On-trip care" class="h-full">
                                                   <div class="wh-full">
@@ -7449,7 +7449,7 @@
                                                 <div class="cob9xum dir dir-ltr"
                                                   style="--carousel-wrapper-margin:-8px;">
                                                   <ul class="_rxz20bq" style="margin-left: 0px; margin-right: 0px;">
-                                                    <li aria-hidden="false" data-key="Bedroom 1" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 1" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 1" class="h-full">
                                                         <div style="padding: 8px;"><button data-modal="#gallery-modal"
@@ -7492,7 +7492,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 2" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 2" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 2" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7535,7 +7535,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 3" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 3" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 3" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7578,7 +7578,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 4" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 4" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 4" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7621,7 +7621,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 5" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 5" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 5" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7664,7 +7664,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 6" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 6" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 6" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7707,7 +7707,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 7" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 7" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 7" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7750,7 +7750,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 8" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 8" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 8" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7793,7 +7793,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 9" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 9" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 9" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7836,7 +7836,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 10" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 10" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 10" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7879,7 +7879,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 11" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 11" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 11" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7922,7 +7922,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 12" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 12" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 12" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -7965,7 +7965,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 13" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 13" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 13" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -12605,9 +12605,9 @@
                                               </div>
                                             </div>
                                             <div style="--carousel-wrapper-margin: 0px;" class="cob9xum dir dir-ltr">
-                                              <ul class="_3uceys" style="margin-left: -8px; margin-right: -8px;">
+                                              <ul class="feature__airbnb-ul" style="margin-left: -8px; margin-right: -8px;">
                                                 <li aria-hidden="false" data-key="Your Renaissance retreat"
-                                                  class="_1w7e1y2"
+                                                  class="feature__airbnb-li"
                                                   style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                   <div data-key="Your Renaissance retreat" class="h-full">
                                                     <div class="wh-full">
@@ -12647,7 +12647,7 @@
                                                   </div>
                                                 </li>
                                                 <li aria-hidden="false" data-key="A revered garden estate"
-                                                  class="_1w7e1y2"
+                                                  class="feature__airbnb-li"
                                                   style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                   <div data-key="A revered garden estate" class="h-full">
                                                     <div class="wh-full">
@@ -12686,7 +12686,7 @@
                                                     </div>
                                                   </div>
                                                 </li>
-                                                <li aria-hidden="false" data-key="Tranquil seclusion" class="_1w7e1y2"
+                                                <li aria-hidden="false" data-key="Tranquil seclusion" class="feature__airbnb-li"
                                                   style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                   <div data-key="Tranquil seclusion" class="h-full">
                                                     <div class="wh-full">
@@ -13236,9 +13236,9 @@
                                             </div>
                                           </div>
                                           <div style="--carousel-wrapper-margin: 0px;" class="cob9xum dir dir-ltr">
-                                            <ul class="_3uceys" style="margin-left: -8px; margin-right: -8px;">
+                                            <ul class="feature__airbnb-ul" style="margin-left: -8px; margin-right: -8px;">
                                               <li aria-hidden="false" data-key="Start-to-finish trip planning"
-                                                class="_1w7e1y2"
+                                                class="feature__airbnb-li"
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                 <div data-key="Start-to-finish trip planning" class="h-full">
                                                   <div class="wh-full">
@@ -13277,7 +13277,7 @@
                                                 </div>
                                               </li>
                                               <li aria-hidden="false" data-key="300 point inspection and vetting"
-                                                class="_1w7e1y2"
+                                                class="feature__airbnb-li"
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                 <div data-key="300 point inspection and vetting" class="h-full">
                                                   <div class="wh-full">
@@ -13315,7 +13315,7 @@
                                                   </div>
                                                 </div>
                                               </li>
-                                              <li aria-hidden="false" data-key="On-trip care" class="_1w7e1y2"
+                                              <li aria-hidden="false" data-key="On-trip care" class="feature__airbnb-li"
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                 <div data-key="On-trip care" class="h-full">
                                                   <div class="wh-full">
