--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -894,7 +894,7 @@
                                                 <ul class="_rxz20bq"
                                                   style="margin-left: 0px; margin-right: 0px; scroll-padding: 18px;">
                                                   <div aria-hidden="true" style="flex: 0 0 18px;"></div>
-                                                  <li aria-hidden="false" data-key="Bedroom 1" class="_1w7e1y2"
+                                                  <li aria-hidden="false" data-key="Bedroom 1" class="feature__airbnb-li"
                                                     style="border-width: 0px; max-width: 44.843%; flex: 0 0 44.843%;">
                                                     <div data-key="Bedroom 1" class="h-full">
                                                       <div style="padding: 6px;"><button
@@ -940,7 +940,7 @@
                                                         </button></div>
                                                     </div>
                                                   </li>
-                                                  <li aria-hidden="false" data-key="Bedroom 2" class="_1w7e1y2"
+                                                  <li aria-hidden="false" data-key="Bedroom 2" class="feature__airbnb-li"
                                                     style="border-width: 0px; max-width: 44.843%; flex: 0 0 44.843%;">
                                                     <div data-key="Bedroom 2" class="h-full">
                                                       <div style="padding: 6px;"><button type="button"
@@ -985,7 +985,7 @@
                                                         </button></div>
                                                     </div>
                                                   </li>
-                                                  <li aria-hidden="false" data-key="Bedroom 3" class="_1w7e1y2"
+                                                  <li aria-hidden="false" data-key="Bedroom 3" class="feature__airbnb-li"
                                                     style="border-width: 0px; max-width: 44.843%; flex: 0 0 44.843%;">
                                                     <div data-key="Bedroom 3" class="h-full">
                                                       <div style="padding: 6px;"><button type="button"
@@ -1029,7 +1029,7 @@
                                                         </button></div>
                                                     </div>
                                                   </li>
-                                                  <li aria-hidden="false" data-key="Bedroom 4" class="_1w7e1y2"
+                                                  <li aria-hidden="false" data-key="Bedroom 4" class="feature__airbnb-li"
                                                     style="border-width: 0px; max-width: 44.843%; flex: 0 0 44.843%;">
                                                     <div data-key="Bedroom 4" class="h-full">
                                                       <div style="padding: 6px;"><button type="button"
@@ -2997,7 +2997,7 @@
                                                 style="margin-left: -6px; margin-right: -6px; scroll-padding: 24px;">
                                                 <div aria-hidden="true" style="flex: 0 0 24px;"></div>
                                                 <li aria-hidden="false" data-key="Always fully equipped"
-                                                  class="_1w7e1y2"
+                                                  class="feature__airbnb-li"
                                                   style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
                                                   <div data-key="Always fully equipped" class="h-full">
                                                     <div class="wh-full">
@@ -3039,7 +3039,7 @@
                                                   </div>
                                                 </li>
                                                 <li aria-hidden="false" data-key="One-of-a-kind details"
-                                                  class="_1w7e1y2"
+                                                  class="feature__airbnb-li"
                                                   style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
                                                   <div data-key="One-of-a-kind details" class="h-full">
                                                     <div class="wh-full">
@@ -3082,7 +3082,7 @@
                                                   </div>
                                                 </li>
                                                 <li aria-hidden="false" data-key="Exceptional hospitality"
-                                                  class="_1w7e1y2"
+                                                  class="feature__airbnb-li"
                                                   style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
                                                   <div data-key="Exceptional hospitality" class="h-full">
                                                     <div class="wh-full">
@@ -6705,7 +6705,7 @@
                                                 <div class="cob9xum dir dir-ltr"
                                                   style="--carousel-wrapper-margin:-8px;">
                                                   <ul class="_rxz20bq" style="margin-left: 0px; margin-right: 0px;">
-                                                    <li aria-hidden="false" data-key="Bedroom 1" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 1" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 1" class="h-full">
                                                         <div style="padding: 8px;"><button data-modal="#gallery-modal"
@@ -6750,7 +6750,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 2" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 2" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 2" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -6795,7 +6795,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 3" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 3" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 3" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -6839,7 +6839,7 @@
                                                           </button></div>
                                                       </div>
                                                     </li>
-                                                    <li aria-hidden="false" data-key="Bedroom 4" class="_1w7e1y2"
+                                                    <li aria-hidden="false" data-key="Bedroom 4" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 4" class="h-full">
                                                         <div style="padding: 8px;"><button type="button"
@@ -11360,7 +11360,7 @@
                                           <div class="cob9xum dir dir-ltr" style="--carousel-wrapper-margin:0px;">
                                             <ul class="carousel-slider__list"
                                               style="margin-left: -8px; margin-right: -8px;">
-                                              <li aria-hidden="false" data-key="Always fully equipped" class="_1w7e1y2"
+                                              <li aria-hidden="false" data-key="Always fully equipped" class="feature__airbnb-li"
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                 <div data-key="Always fully equipped" class="h-full">
                                                   <div class="wh-full">
@@ -11402,7 +11402,7 @@
                                                   </div>
                                                 </div>
                                               </li>
-                                              <li aria-hidden="false" data-key="One-of-a-kind details" class="_1w7e1y2"
+                                              <li aria-hidden="false" data-key="One-of-a-kind details" class="feature__airbnb-li"
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                 <div data-key="One-of-a-kind details" class="h-full">
                                                   <div class="wh-full">
@@ -11445,7 +11445,7 @@
                                                 </div>
                                               </li>
                                               <li aria-hidden="false" data-key="Exceptional hospitality"
-                                                class="_1w7e1y2"
+                                                class="feature__airbnb-li"
                                                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                 <div data-key="Exceptional hospitality" class="h-full">
                                                   <div class="wh-full">
